Fixing files changed (#9)
* additional fixes